# VMS

./: .dockerignore  .env.example  .gitignore  .nvim.lua  Cargo.toml  Dockerfile  Dockerfile.test  README.md  cli.txt  diesel.toml  docker-compose.yml
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/app/src/component/: account.rs  channel.rs  character.rs  exp.rs  hp.rs  inventory.rs  item.rs  keybinding.rs  map.rs  meso.rs  mob.rs  mod.rs  mp.rs  npc.rs  portal.rs  position.rs  session.rs  skill.rs  slot.rs  world.rs
crates/app/src/message/: mod.rs  result.rs
crates/app/src/plugin/: custom_plugin.rs  dispatch_plugin.rs  error.rs  handler_plugin.rs  mod.rs  packet_plugin.rs  request_plugin.rs  response_plugin.rs  server_plugin.rs
crates/app/src/resource/: custom_resource.rs  mod.rs
crates/app/src/server/: custom_server.rs  mod.rs
crates/app/src/system/: event.rs  event_handler.rs  game_event_handler.rs  inventory_handler.rs  item_cleanup.rs  lazy.rs  login_event_handler.rs  login_handler.rs  mob_event_handler.rs  mod.rs  packet_dispatch.rs  result_handler.rs  startup.rs  system_params.rs  tcp_transition.rs  tick.rs  transition_cleanup.rs
crates/db/: Cargo.toml
crates/db/src/: error.rs  lib.rs  pool.rs  schema.rs
crates/db/src/account/: error.rs  getters.rs  model.rs  setters.rs
crates/db/src/character/: error.rs  getters.rs  model.rs  setters.rs
crates/db/src/inventory/: error.rs  getters.rs  model.rs  setters.rs
crates/db/src/item/: error.rs  getters.rs  model.rs  setters.rs
crates/db/src/keybinding/: error.rs  getters.rs  mod.rs  model.rs  setters.rs
crates/db/src/skill/: error.rs  getters.rs  model.rs  setters.rs
crates/entity/: Cargo.toml
crates/entity/src/: error.rs  lib.rs  schema.rs
crates/entity/src/account/: error.rs  model.rs  service.rs  wrapper.rs
crates/entity/src/channel/: error.rs  model.rs  service.rs  wrapper.rs
crates/entity/src/character/: error.rs  model.rs  wrapper.rs
crates/entity/src/item/: error.rs  model.rs  service.rs  wrapper.rs
crates/entity/src/job/: model.rs  wrapper.rs
crates/entity/src/keybinding/: error.rs  mod.rs  model.rs  wrapper.rs
crates/entity/src/map/: constants.rs  error.rs  model.rs  service.rs  wrapper.rs
crates/entity/src/mob/: constants.rs  mod.rs  model.rs  wrapper.rs
crates/entity/src/portal/: error.rs  model.rs  wrapper.rs
crates/entity/src/skill/: error.rs  model.rs  wrapper.rs
crates/entity/src/world/: constants.rs  error.rs  mod.rs  service.rs  wrapper.rs
crates/inc/: Cargo.toml
crates/inc/src/: account.rs  channel.rs  character.rs  error.rs  helpers.rs  item.rs  lib.rs  map.rs  world.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: command.rs  db_command.rs  error.rs  event.rs  fuckoff.rs  lib.rs  start.rs  tcp_command.rs  tcp_event.rs
crates/ipc/src/asyncronous/: command.rs  db_command.rs  error.rs  event.rs  item.rs  mod.rs
crates/ipc/src/data/: accept_tos.rs  change_keymap.rs  change_map.rs  create_char.rs  delete_char.rs  list_chars.rs  mod.rs  pickup_item.rs  register_pic.rs  select_char_with_pic.rs  take_damage.rs
crates/ipc/src/syncronous/: account.rs  char.rs  constants.rs  error.rs  item.rs  job.rs  map.rs  mod.rs
crates/ipc/src/workers/: character.rs  in_game.rs  login.rs  mod.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: error.rs  lib.rs  service.rs
crates/metadata/src/item/: equip.rs  error.rs  inventory.rs  mod.rs  nonequip.rs
crates/metadata/src/job/: error.rs  job.rs  mod.rs  skill.rs
crates/metadata/src/map/: death.rs  error.rs  map.rs  mob.rs  mod.rs  portal.rs
crates/net/: Cargo.toml
crates/net/src/: error.rs  lib.rs  result.rs  tcp.rs
crates/net/src/action/: model.rs
crates/net/src/cc/: handler.rs  reader.rs  store.rs
crates/net/src/change_keymap/: handler.rs  reader.rs  store.rs
crates/net/src/change_map/: error.rs  handler.rs  reader.rs  store.rs
crates/net/src/chat_text/: handler.rs  reader.rs  store.rs
crates/net/src/check_char_name/: error.rs  handler.rs  reader.rs  store.rs
crates/net/src/close_attack/: constants.rs  handler.rs  mod.rs  reader.rs  store.rs
crates/net/src/create_char/: constants.rs  handler.rs  reader.rs  store.rs
crates/net/src/credentials/: error.rs  handler.rs  reader.rs  store.rs
crates/net/src/crypto/: aes.rs  constants.rs  custom.rs
crates/net/src/delete_char/: error.rs  handler.rs  reader.rs  store.rs
crates/net/src/enter_cash_shop/: handler.rs  store.rs
crates/net/src/list_chars/: error.rs  handler.rs  reader.rs  store.rs
crates/net/src/list_worlds/: handler.rs  store.rs
crates/net/src/login_start/: handler.rs
crates/net/src/mob_ai/: error.rs  handler.rs  reader.rs  store.rs
crates/net/src/move_player/: handler.rs  reader.rs  store.rs
crates/net/src/packet/: mod.rs  model.rs
crates/net/src/party_search/: error.rs  handler.rs  reader.rs  store.rs
crates/net/src/pickup_item/: handler.rs  reader.rs  store.rs
crates/net/src/player_logged_in/: handler.rs  reader.rs  store.rs
crates/packet/: Cargo.toml
crates/packet/src/: constants.rs  lib.rs  model.rs  service.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: client.rs  constants.rs  ddos_protection.rs  error.rs  handshake.rs  lib.rs  relay.rs  server.rs  tcp.rs  worker.rs
crates/sec/: Cargo.toml
crates/sec/src/: aes.rs  constants.rs  custom.rs  lib.rs
crates/state/: Cargo.toml
crates/state/src/: error.rs  model.rs
server/: Cargo.toml
server/src/: error.rs
test-suite/: Cargo.toml  test_handshake.rs  test_settings.rs
test-suite/src/: error.rs  lib.rs  test_metadata.rs
test-suite/src/net/: connection.rs
test-suite/src/tests/: mod.rs  test_bevy_client.rs  test_bevy_server.rs  test_change_channel.rs  test_change_map.rs  test_char_list.rs  test_close_attack.rs  test_create_char.rs  test_credentials.rs  test_game.rs  test_handshake.rs  test_last_connected_world.rs  test_login.rs  test_login_started.rs  test_mob_attack.rs  test_move_player.rs  test_player_logged_in.rs  test_recommended_world.rs  test_server_list.rs  test_server_redirect.rs  test_take_damage.rs  test_tos.rs
(+902 files in other folders)
