[package]
name = "server"
version = "0.1.0"
edition = "2024"
path = "src/bin/vms.rs"

[dependencies]
diesel = { version = "2.3.7", features = ["postgres", "network-address", "r2d2"] }
ipnetwork = "0.21.1"
thiserror = "2"
rand = "0.10.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
config = "0.15.22"
serde_json = "1.0.149"
tokio-util = "0.7.18"
runtime = { path = "../crates/runtime" }
state = { path = "../crates/state" }
tick = { path = "../crates/tick" }
