[package]
name = "server"
version = "0.1.0"
edition = "2024"
path = "src/bin/vms.rs"

[dependencies]
diesel = { version = "2.3.7", features = ["postgres", "network-address", "r2d2"] }
thiserror = "2"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
runtime = { path = "../crates/runtime" }
tick = { path = "../crates/tick" }
bevy = "0.18.1"
bevy_renet = "4.0.1"
