[package]
name = "test-suite"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.1"
tokio = { version = "1.51.1", features = ["full"] }
config = { path = "../crates/config" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
net = { path = "../crates/net" }
thiserror = "2"
tracing = "0.1.44"
inc = { path = "../crates/inc" }
serde_json = "1.0.149"
base = { path = "../crates/base" }
metadata = { path = "../crates/metadata" }
dotenvy = "0.15"
op = { path = "../crates/op" }
db = { path = "../crates/db" }
bcrypt = "0.19.0"
runtime = { path = "../crates/runtime" }
diesel = { version = "2.3.7", features = ["postgres", "network-address", "r2d2"] }
r2d2 = "0.8.10"
bevy = { version = "0.18.1", default-features = false }
bevy_renet = {version = "4.0.1", default-features = false, features = ["netcode"] }
