[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
bevy_renet = "4.0.1"
db = { path = "../db" }
runtime = { path = "../runtime" }
config = { path = "../config" }
metadata = { path = "../metadata" }
ipc = { path = "../ipc" }
net = { path = "../net" }
op = { path = "../op" }
base = { path = "../base" }
action = { path = "../action" }
thiserror = "2"
inc = { path = "../inc" }
itertools = "0.14.0"
