[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
bevy_renet = "4.0.1"
db = { path = "../db" }
runtime = { path = "../runtime" }
config = { path = "../config" }
metadata = { path = "../metadata" }
ipc = { path = "../ipc" }
net = { path = "../net" }
op = { path = "../op" }
base = { path = "../base" }
action = { path = "../action" }
thiserror = "2"
inc = { path = "../inc" }
itertools = "0.14.0"
rand = "0.10.1"
tokio = { version = "1.51.1", features = ["full"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing = "0.1.44"
