[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
diesel = { version = "2.3.7", features = ["postgres", "network-address", "r2d2"] }
rand = "0.10.1"
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
num-traits = "0.2.19"
num-derive = "0.4.2"
serde_json = "1.0.149"
tokio-util = "0.7.18"
config = { path = "../config" }
bcrypt = "0.19.0"
