[package]
name = "inc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
binrw = "0.15.1"
thiserror = "2"
base = { path = "../base" }
db = { path = "../db" }
rand = "0.10.1"
config = { path = "../config" }
metadata = { path = "../metadata" }
bcrypt = "0.19.0"
itertools = "0.14.0"
