[package]
name = "net"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
config = { path = "../config" }
op = { path = "../op" }
itertools = "0.14.0"
inc = { path = "../inc" }
rand = "0.10.1"
tracing = "0.1.44"
tokio = { version = "1.51.1", features = ["full"] }
byteorder = "1.5.0"
num-traits = "0.2.19"
aes = "0.8"
