[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
config = { path = "../config" }
inc = { path = "../inc" }
tracing = "0.1.44"
tokio = { version = "1.51.1", features = ["full"] }
db = { path = "../db" }
ipc = { path = "../ipc" }
base = { path = "../base" }
net = { path = "../net" }
rand = "0.10.1"
