[package]
name = "sec"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
diesel = { version = "2.3.7", features = ["postgres", "network-address", "r2d2"] }
aes = "0.9"
hex-literal = "1.1.0"
rand = "0.10.1"
byteorder = "1.5.0"
tracing = "0.1.44"
regex = "1.12.3"
num-traits = "0.2.19"
num-derive = "0.4.2"
