[package]
name = "state"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
tokio = { version = "1.51.1", features = ["full"] }
diesel = { version = "2.3.7", features = ["postgres", "network-address", "r2d2"] }
tokio-util = "0.7.18"
entity = { path = "../entity" }
session = { path = "../session" }
config = { path = "../config" }
db = { path = "../db" }
